#
# file pyproject.toml
#
# SPDX-FileCopyrightText: (c) 2024 Michal Kielan
#
# SPDX-License-Identifier: GPL-3.0-only
#

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleadb"
version = "0.5.3"
description = "Python wrapper for adb protocol."
readme = "README.rst"
authors = [{ name = "Michal Kielan", email = "michalkielan@protonmail.com" }]
license = "GPL-3.0-only"
requires-python = ">3.0.0"

[project.urls]
"Homepage" = "https://github.com/michalkielan/simple-adb"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
exclude = ["tests", "docs"]
